@@ -4,4 +4,5 @@ desktop_gnome_file_sharing.schemas.in
 file-share-properties.c
 file-share-properties.glade
 gnome-user-share-properties.desktop.in
+gnome-user-share.desktop.in.in
 user_share.c
