@@ -1,3 +1,8 @@
+2008-01-18  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add new autostart desktop file
+	to the list
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
